# mudraka

./: .gitignore  CMakeLists.txt  README.md  TODO.md  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml  release.yml
bindings/python/: CMakeLists.txt  mudraka_ext.cpp
bindings/wasm/: CMakeLists.txt  mudraka_embind.cpp
docs/: ARCHITECTURE.md  BUILD.md  CAPTURE_FIXTURE_FORMAT.md  CLOCK_MODEL.md  CONTEXT.md  DECODE_VERIFICATION.md  DIAGNOSTICS.md  FFI_BINDINGS.md  MUDRA_LINK_SIGNAL_SPEC.md  PUBLIC_API.md  README.md  SNC_PACKET_HYPOTHESIS.md  TEST_STRATEGY.md
fixtures/sessions/16bit_rest/: expected.jsonl  index.json  meta.json
fixtures/sessions/24bit_rest/: expected.jsonl  index.json  meta.json
fixtures/sessions/24bit_strong_contraction/: expected.jsonl  index.json  meta.json
include/mudraka/: clock_model.hpp  config.hpp  decoder.hpp  diagnostics.hpp  mudra_decoder.hpp  mudraka.hpp  ring_buffer.hpp  sample_sink.hpp  stream.hpp
npm/: .gitignore  README.md  mudraka.d.ts  package.json
python/mudraka/: __init__.py
python/tests/: test_parity.py
src/: clock_model.cpp  mudra_decoder.cpp  ring_buffer.cpp  stream.cpp
tests/: CMakeLists.txt  fixture_loader.hpp  test_clock_model.cpp  test_decoder.cpp  test_parity.cpp  test_ring_buffer.cpp  test_stream.cpp
tools/: README.md  capture_session.py  inspect_capture.py  oracle_harness.py  requirements.txt  stamp_version.py  verify_wasm.mjs
